--- a/docs/css/main.less
+++ b/docs/css/main.less
@@ -3,6 +3,7 @@ body {
   background-color: #edeef0;
   font-family: -apple-system,BlinkMacSystemFont,Roboto,Helvetica Neue,sans-serif;
   font-size: 12.5px;
+  z-index: 1;
 }
 
 .root {
