--- a/docs/css/menu.less
+++ b/docs/css/menu.less
@@ -1,10 +1,12 @@
+@border-color: #dedfe1;
+
 .menu__container(@width: 200px) {
   width: @width;
   height: 28.8px;
   padding: 6px 0 0 10px;
   margin: 11px 0 0 15px;
   box-sizing: border-box;
-  border: #edeef0 1px solid;
+  border: @border-color 1px solid;
 }
 
 .menu {
