--- a/docs/css/dateIntervalPickerOpened.less
+++ b/docs/css/dateIntervalPickerOpened.less
@@ -1,8 +1,59 @@
 @border-color: #dedfe1;
 
+.line {
+  display: flex;
+}
+
 .dateIntervalPickerOpened {
   width: 474px;
   height: 247px;
   background-color: white;
   box-shadow: 0 1px 4px 0 @border-color * 0.5;
+
+  .dateIntervalPickerOpened__content {
+    @grayColor: #828282; // color of the years and months in title over calendar content
+    @blueColor: #45688e; // color of the weekend and usual months
+    @blueBoldColor: #45688e; // color of selected months
+    @monthBorderColor: #ccd6e2; // color of border of selected months
+    @usualColor: #000000; // color of the usual days
+    @highlightColor: #597da3; // color of the selected day range
+
+    font-size: 11.2px;
+    padding: 20px 31px 20px 31px;
+
+    .thePreviousYear {
+      color: @grayColor;
+      text-align: right;
+      padding-bottom: 6px;
+    }
+
+    .theFollowingYear {
+      color: @grayColor;
+      text-align: left;
+      padding-bottom: 6px;
+    }
+
+    .lineOfMonths {
+      .line;
+
+      .month {
+        color: @blueColor;
+      }
+    }
+  }
+}
+
+.between {
+  padding-left: 8px;
+  padding-right: 7px;
+  height: 19.44px;
+}
+
+.betweenMonth {
+  .between;
+  height: 13.44px;
+}
+
+.betweenMonth:hover {
+  cursor: pointer;
 }
