--- a/calendar/src/static/css/dateIntervalPickerOpened.less
+++ b/calendar/src/static/css/dateIntervalPickerOpened.less
@@ -19,7 +19,7 @@
     @highlightColor: #597da3; // color of the selected day range
 
     font-size: 11.2px;
-    padding: 20px 31px 20px 31px;
+    padding: 20px 29.5px 20px 29.5px;
 
     .thePreviousYear {
       color: @grayColor;
@@ -38,6 +38,8 @@
 
       .month {
         color: @blueColor;
+        width: 21px;
+        text-align: center;
       }
 
       .month-selected {
@@ -47,10 +49,10 @@
     }
 
     .border {
-      width: 61px;
-      height: 1px;
+      width: 65px;
+      height: 2px;
       background-color: @monthBorderColor;
-      margin: 0 -2em;
+      margin: 0 -25px;
       visibility: hidden;
     }
 
