--- a/docs/css/dateIntervalPicker.less
+++ b/docs/css/dateIntervalPicker.less
@@ -13,13 +13,18 @@
   }
 
   .interval {
+    width: 160px;
     font-size: 11px;
+  }
+
+  .calendar-icon {
+    position: absolute;
+    margin-left: 167px;
   }
 
   .calendar-icon img {
     width: 13px;
     height: auto;
-    padding-left: 10px;
   }
 }
 
