--- a/docs/css/dateIntervalPickerOpened.less
+++ b/docs/css/dateIntervalPickerOpened.less
@@ -2,7 +2,6 @@
 @content-width: 421px;
 @white-window-width: 474px;
 @month-width: 24.5px;
-@selected-month-width: 24.5px;
 @between-months-width: 11px;
 @start-position: -174.5px;
 
@@ -26,7 +25,7 @@
 
 .header-animation(@k) {
   .header;
-  left: (@start-position + (@selected-month-width + @between-months-width) * @k);
+  left: (@start-position + (@month-width + @between-months-width) * @k);
   transition: all 400ms ease-out;
 }
 
@@ -45,7 +44,7 @@
     @highlightColor: #597da3; // color of the selected day range
 
     width: @content-width;
-    height: 20px;
+    height: auto;
     position: relative;
     overflow: hidden;
     font-size: 11.2px;
@@ -73,7 +72,7 @@
 
       .month-selected {
         .month;
-        width: @selected-month-width;
+        width: @month-width;
         font-weight: 700;
       }
     }
@@ -94,13 +93,8 @@
   }
 }
 
-.between {
-  width: @between-months-width;
-  height: 19.44px;
-}
-
 .betweenMonth {
-  .between;
+  width: @between-months-width;
   height: 13.44px;
 }
 
