--- a/docs/css/time.less
+++ b/docs/css/time.less
@@ -39,7 +39,7 @@ input::-webkit-inner-spin-button {
     padding-top: 10px;
     visibility: hidden;
     opacity: 0;
-    transition: 1s;
+    transition: 800ms;
 
     .time {
       .line;
