--- a/docs/js/components/DateIntervalPicker/DateIntervalPickerOpened/dateIntervalPickerOpened.less
+++ b/docs/js/components/DateIntervalPicker/DateIntervalPickerOpened/dateIntervalPickerOpened.less
@@ -3,7 +3,7 @@
 @white-window-width: 474px;
 @month-width: 24.5px;
 @between-months-width: 11px;
-@start-position: -174.5px;
+@start-position: -210px;
 
 .line {
   display: flex;
@@ -106,6 +106,10 @@
   }
 }
 
+.header-left-6 {
+  .header-animation(6px)
+}
+
 .header-left-5 {
   .header-animation(5px)
 }
@@ -124,6 +128,10 @@
 
 .header-left-1 {
   .header-animation(1px)
+}
+
+.header-right-6 {
+  .header-animation(-6px)
 }
 
 .header-right-5 {
