--- a/docs/js/components/DateIntervalPicker/DateIntervalPickerOpened/dateIntervalPickerOpened.less
+++ b/docs/js/components/DateIntervalPicker/DateIntervalPickerOpened/dateIntervalPickerOpened.less
@@ -106,51 +106,51 @@
   }
 }
 
-.header-left-6 {
+.header--left--6 {
   .header-animation(6px)
 }
 
-.header-left-5 {
+.header--left--5 {
   .header-animation(5px)
 }
 
-.header-left-4 {
+.header--left--4 {
   .header-animation(4px)
 }
 
-.header-left-3 {
+.header--left--3 {
   .header-animation(3px)
 }
 
-.header-left-2 {
+.header--left--2 {
   .header-animation(2px)
 }
 
-.header-left-1 {
+.header--left--1 {
   .header-animation(1px)
 }
 
-.header-right-6 {
+.header--right--6 {
   .header-animation(-6px)
 }
 
-.header-right-5 {
+.header--right--5 {
   .header-animation(-5px)
 }
 
-.header-right-4 {
+.header--right--4 {
   .header-animation(-4px)
 }
 
-.header-right-3 {
+.header--right--3 {
   .header-animation(-3px)
 }
 
-.header-right-2 {
+.header--right--2 {
   .header-animation(-2px)
 }
 
-.header-right-1 {
+.header--right--1 {
   .header-animation(-1px)
 }
 
