--- a/calendar/src/static/js/components/DateIntervalPicker/DateIntervalPickerOpened/dateIntervalPickerOpened.less
+++ b/calendar/src/static/js/components/DateIntervalPicker/DateIntervalPickerOpened/dateIntervalPickerOpened.less
@@ -31,7 +31,7 @@
 
 .dateIntervalPickerOpened {
   width: @white-window-width;
-  height: 290px;
+  height: 293px;
   background-color: white;
   box-shadow: 0 1px 4px 0 @border-color * 0.5;
 
@@ -44,11 +44,11 @@
     @highlightColor: #597da3; // color of the selected day range
 
     width: @content-width;
-    height: auto;
+    height: 253px;
     position: relative;
     overflow: hidden;
     font-size: 11.2px;
-    padding: 40px 0 20px 0;
+    padding-top: 40px;
     margin: 0 (@white-window-width - @content-width) * 0.5px 0 (@white-window-width - @content-width) * 0.5px;
 
     .decYear {
