bugs were fixed

--- a/calendar/src/static/js/components/DateIntervalPicker/DateIntervalPickerOpened/Time/time.less
+++ b/calendar/src/static/js/components/DateIntervalPicker/DateIntervalPickerOpened/Time/time.less
@@ -46,11 +46,12 @@ input::-webkit-inner-spin-button {
       margin-right: 85px;
 
       .inputTime {
-        text-align: center;
+        margin: 0 3px 0 3px;
+        padding: 3.5px 0 2.5px 0;
         width: 38px;
         height: 19px;
-        padding: 3.5px 0 2.5px 0;
-        margin: 0 3px 0 3px;
+        font-size: 11.2px;
+        text-align: center;
       }
 
       .colon {
