--- a/docs/js/components/DateIntervalPicker/DateIntervalPickerOpened/Calendar/calendar.less
+++ b/docs/js/components/DateIntervalPicker/DateIntervalPickerOpened/Calendar/calendar.less
@@ -36,9 +36,10 @@
       .line;
 
       .day {
+        padding: 2px 4px 2px 4px;
         width: 14.5px;
         height: 14px;
-        padding: 2px 4px 2px 4px
+        line-height: 14.5px;
       }
 
       .weekend {
