--- a/docs/js/components/DateIntervalPicker/DateIntervalPickerOpened/dateIntervalPickerOpened.less
+++ b/docs/js/components/DateIntervalPicker/DateIntervalPickerOpened/dateIntervalPickerOpened.less
@@ -33,6 +33,7 @@
   width: @white-window-width;
   height: 293px;
   background-color: white;
+  cursor: default;
   box-shadow: 0 1px 4px 0 @border-color * 0.5;
 
   .dateIntervalPickerOpened__content {
